Updates to the launcher
Added - launcher will update itself
Added - event messages between downloads
Fixed - error when image files are missing, will use default backgrounds.

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -117,59 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="MainIcon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAABAAIAICAQAAAAAADoAgAAJgAAACAgAAAAAAAAqAgAAA4DAAAoAAAAIAAAAEAAAAABAAQAAAAAAIAC
-        AAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAgAAAgAAAAICAAIAAAACAAIAAgIAAAMDAwACAgIAAAAD/AAD/
-        AAAA//8A/wAAAP8A/wD//wAA////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAMAAAAAAAAAAAAAAAAAADiIgAAAAAAAAAAAAAAAAIiHgAgAAAAAAAAAAAAAAAiIeAAIgAAAgAAAAA
-        AAAAiIh4gwAIgACDAAAAAAAAiDgHCIgwAIgAAAAAAAAAAzOAgIiIMBCHiHeAAAAAAAOICAiIiBEzCIf/
-        cAAAAACIg4CIiIgAiAiIeAAAAAAAAAgIiIiIiIiPCAAAAAAAOIiAM4iIiIh3iAgAAAAAAAAACBCIiIiI
-        f3iIiAAAAACIiIiIiIiIiH/3eAAAAAAIAAiIiIiAAAAIj/AAAAAACAAAiIiAAAAAAAiAAAAAAAgAgIiI
-        gAAAAIgAAAAAAAAIAICIiIAAAAAIgAAAAAAACBAAiIiAAAAAAIgAAAAAAACBCAiIAwAAAAAAAAAAAAAA
-        iIiAiDAAAAAAAACIAAAAAIiIiIgwAAAACIiH+AAAAACIiIiIiDM4iH////gAAAAAA4iIiDAAOIh///eA
-        AAAACAAAiIiIg4iIiId/gAAAAAgAAAAzAIiIiHd//wAAAAAIAAAAAAABiIf/f/gAAAAACAAAAAAAADiI
-        d3+AAAAAAAgAAAAziIiIiH/4AAAAAAAIAAAAA4iIiIiIAAAAAAAACAAAAAAAiIiAAAAAAAAA//+D////
-        A////gD///gA///wAGf/wABH/4AAA/gAAAP4AAAD+AAAA/gAAAfgAAAP4AAAB+AAAAfAAAAPgAAAPwAA
-        AD8AAAA/AAAAP4AAAB+AAAAPgAAAD8AAAA/AAAAPwAAAD8AAAB/AAAAfyAAAP8wAAH/OAAD/xwAB/8fA
-        H/8oAAAAIAAAAEAAAAABAAgAAAAAAIAEAAAAAAAAAAAAAAABAAAAAAAAAAAAADlBQgBCSUoAMTQxAEpR
-        UgAxODkAGBgYADk8OQApMDEAKSwpAFJZWgAxMDEACAwIACEgIQBCRUIAAAQAAFphYwBrcXMAISQhAP//
-        /wAQFBAACAgIAHN5ewB7goQAc32EAGNpawBCRUoAISgpAHt9hAA5PEIAa21rAEpNUgBSVVoAOTg5ABgc
-        GACEjpQAEBAQACkoKQBSVVIASk1KAHuGjAB7fXsAWl1aAEJBQgDW3+cAtb7GADE0OQC9094AUl1jAOfj
-        5wBjZWsA9/v/AGt1ewCcnpwA9/P3AEJNUgBzdXsA9/f3AFplawDGy84ApaatAIyWnADGz9YACBAQAGtt
-        cwBSUVIAGBwhAK22vQBKVVIAISQpAFpdYwCtsrUArbrGAIySlADW19YAzs/OAEpVWgCUmpwAlJ6lAN7j
-        5wC9vsYAEBgYAISKjABKSUoAtb69AGNhYwBzdXMAa3VzAGNtawC9vr0A5+vvAM7X1gCEhoQA7+vvACks
-        MQClqq0AOUVCAJSSlABrfYQAQlFaABggIQBKWVoAGCAYAHOChAC1ur0Ac3FzAIyOlABjbXMAUl1aAFJh
-        YwBjZWMAhI6MANbT1gCEhowACAwQAMbDxgBrcXsA//v/AMbHxgCtrrUAlJ6cAFplYwBCTUoAWmlrACk0
-        MQBCUVIAY3FzACEsKQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAADxQGFA8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD8SDSINFAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAA8SCwcBCBINFBUAAAAAAAAAAAAAAAAAAAAAAAAAAAAVBQEKEQICCA0NBgAAAAAAAAAAAAAAAAAA
-        AAAAAAAAEgICEWgRCQcCCSIiDAAAEhQAAAAAAAAAAAAAAAAADy4qHxYtEQMDCAICZgYkAC4gCAAAAAAA
-        AAAAAAAAABImBB8cVGkrASELCQQaBhIJCgEIFQAAAAAAAAAPDQMEKgECFkdABEFTAQcDLigKBQheJQkk
-        AAAAAAAAAA8IAWABCjROFhlrOiABBx0IBDs1Mjw8agYAAAAAAAAADwgBNxAZIxcYGBEQHx0dAQEiAldQ
-        ExNKFQAAAAAAAABkN20KARFSFxcWGWwCBwcCAh8RJyg8HBIAAAAAAAAkDAUwBAUQFhwXGDQyIAICMD1A
-        VjMZGlENAAAAAAAAACUBDg4QbxEBASkRbgonAiA0LT5VTSdGGwtCAAAAAAAAFAsFEUlJEB0LOB4QIB8f
-        ClIsE3AyFhkXMgsAAAAAAA8UCyEZGBg4BBAWHlUKHwQQKFRPE0pHUwUNAAAAAAADAwMNBhIKFhdxF1ZG
-        DgcLCAkIByseEzMGAAAAAAAADAcHDgsGJCFXHBwcEQgMPz8kIgkHBwcZJg8AAAAAAAAABQcrCwYUBUAW
-        GBYZEgwMDAxyIhsLAwkNFQAAAAAAAA8DBRoLBhQDOjQ4ERASDAwMFRUPDxVCCycJAAAAAAAAAAwFDh0G
-        BgUwWFgZJhsGIgYGBgYNGysQHgkVAAAAAAAADwMIAh0BAh8gIERBASEIJQkSEg0NDQYUJSUMAAAAAAAV
-        BQMaBAQrDgoEDgEhAwkbRQ1CBhQkDCQbJ0EAAAAAAABFLg4CRAQmCgoEAQUDCAklGxslDioWNXM2EQAA
-        AAAAAAYDBEQEJiYgCgQOKwEBARpMdEM5ExMTEzYOAAAAAAAABgkFAQIKEEYmDgEhBQcBNzojLBN1NjFZ
-        TUUAAAAAAAAIEAkuAwUOJwoQBCcaAQ4aBHkjeBx3djEXAAAAAAAAAAUpDAMuAyEHAQEhBxoCehAKGC1b
-        R1oTOQkAAAAAAAAAXhEAIgMLCAgDCwsDBR0aBHtIOTZfXRNcAAAAAAAAAAASOAAAFAkDfAgDBQcFB2A3
-        MGdfS0oTSQ8AAAAAAAAAAGQpAAAADAkFAQECBAR9Y0wwYi8TOWEAAAAAAAAAAAAADU0VAAAADxR/AQIE
-        TGVlCjoYI34bAAAAAAAAAAAAAAAkEBUAAAAAAAAVZgMOAgICDgUUAAAAAAAAAAAAAAD//4P///8D///8
-        AP//+AD///AAZ//AAEf/gAAD+AAAA/gAAAP4AAAD+AAAB+AAAA/gAAAH4AAAB8AAAA+AAAA/AAAAPwAA
-        AD8AAAA/gAAAH4AAAA+AAAAPwAAAD8AAAA/AAAAPwAAAH8AAAB/IAAA/zAAAP84AAP/HAAH/x+AH/w==
-</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="infantry" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\infantry.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
